# bcdt-rust_plasmoid_example

./: .gitignore  CMakeLists.txt  Makefile  README.md
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: config_general.qml  main.qml
plugin/: CMakeLists.txt  Cargo.toml  plugin.cpp  plugin.hpp  qmldir
plugin/cpp/include/: BackendProxy.hpp  Plugin.hpp
plugin/cpp/src/: BackendProxy.cpp  Plugin.cpp
plugin/rust/: Cargo.toml  build.rs
plugin/rust/src/: backend.rs  lib.rs
plugin/src/: backend.rs  lib.rs
scripts/: uninstall.sh
