[package]
name = "plugin_impl"
version = "0.1.0"
authors = [
    "Simon Brummer <simon.brummer@posteo.de>"
]
edition = "2021"
license = "MPL-2.0"

[profile.dev]
opt-level = 0
strip = "none"
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = 3
strip = "debuginfo"
debug-assertions = false
overflow-checks = false

[lib]
name = "plugin_impl"
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"
